logs/2023/05/10/circleci/push/decoupled-ingestion/2602ace4576ea4d9ab1b5e50ec04c5b9a66ca560/all-tests/49/typing/103-0.txt
typing: install_deps> python -I -m pip install mypy pytest pytest-cov pytest-mock types-python-dateutil types-PyYAML types-requests
.pkg: install_requires> python -I -m pip install 'setuptools>=46.4.0' versioningit
.pkg: _optional_hooks> python /home/circleci/.pyenv/versions/3.8.16/lib/python3.8/site-packages/pyproject_api/_backend.py True setuptools.build_meta
.pkg: get_requires_for_build_sdist> python /home/circleci/.pyenv/versions/3.8.16/lib/python3.8/site-packages/pyproject_api/_backend.py True setuptools.build_meta
.pkg: freeze> python -m pip freeze --all
.pkg: importlib-metadata==6.6.0,packaging==23.1,pip==23.1.2,setuptools==67.7.2,tomli==2.0.1,versioningit==2.2.0,wheel==0.40.0,zipp==3.15.0
.pkg: prepare_metadata_for_build_wheel> python /home/circleci/.pyenv/versions/3.8.16/lib/python3.8/site-packages/pyproject_api/_backend.py True setuptools.build_meta
.pkg: build_sdist> python /home/circleci/.pyenv/versions/3.8.16/lib/python3.8/site-packages/pyproject_api/_backend.py True setuptools.build_meta
typing: install_package_deps> python -I -m pip install 'PyGithub~=1.55' 'PyYAML>=5.0' 'click-loglevel~=0.2' 'click>=7.0' 'in-place~=0.4' 'pydantic~=1.7' 'python-dateutil~=2.7' 'python-dotenv<2.0,>=0.11' 'requests~=2.20'
typing: install_package> python -I -m pip install --force-reinstall --no-deps /home/circleci/project/.tox/.tmp/package/1/tinuous-0.6.1.post28+g2602ace.tar.gz
typing: freeze> python -m pip freeze --all
typing: certifi==2023.5.7,cffi==1.15.1,charset-normalizer==3.1.0,click==8.1.3,click-loglevel==0.4.0.post1,coverage==7.2.5,cryptography==40.0.2,Deprecated==1.2.13,exceptiongroup==1.1.1,idna==3.4,in-place==0.5.0,iniconfig==2.0.0,mypy==1.3.0,mypy-extensions==1.0.0,packaging==23.1,pip==23.1.2,pluggy==1.0.0,pycparser==2.21,pydantic==1.10.7,PyGithub==1.58.2,PyJWT==2.7.0,PyNaCl==1.5.0,pytest==7.3.1,pytest-cov==4.0.0,pytest-mock==3.10.0,python-dateutil==2.8.2,python-dotenv==1.0.0,PyYAML==6.0,requests==2.30.0,setuptools==67.7.2,six==1.16.0,tinuous @ file:///home/circleci/project/.tox/.tmp/package/1/tinuous-0.6.1.post28%2Bg2602ace.tar.gz#sha256=caaeecd71a7961c410c56928c20b09ae94ca1cd28a5c0a782696b5c4cfaf197b,tomli==2.0.1,types-python-dateutil==2.8.19.13,types-PyYAML==6.0.12.9,types-requests==2.30.0.0,types-urllib3==1.26.25.13,typing_extensions==4.5.0,urllib3==2.0.2,wheel==0.40.0,wrapt==1.15.0
typing: commands[0]> mypy src test
src/tinuous/circleci.py:337: error: "Type[TriggerType]" has no attribute
"DECOUPLE_INGESTION_SYSTEM"  [attr-defined]
            elif self is TriggerType.DECOUPLE_INGESTION_SYSTEM:
                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Found 1 error in 1 file (checked 15 source files)
typing: exit 1 (8.40 seconds) /home/circleci/project> mypy src test pid=351
.pkg: _exit> python /home/circleci/.pyenv/versions/3.8.16/lib/python3.8/site-packages/pyproject_api/_backend.py True setuptools.build_meta
  typing: FAIL code 1 (24.53=setup[16.13]+cmd[8.40] seconds)
  evaluation failed :( (24.60 seconds)

Exited with code exit status 1
